# ArkBuilding

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  UnfuckMSVC.cmake  algorithm.cpp  building.go  building_data_model.cpp  compile_flags.txt  concurrent_test.bat  cpp.hint  go_bridge.cpp  go_bridge.h  jsoncpp.cpp  lgtm.yml  locale_util.cpp  player_building_model.cpp  player_data_model.cpp  seq_test.bat  test.bat  worker.cpp
exec/: main.cpp
img/: arkbuilding.drawio
include/: albc_config.h  algorithm.h  attributes_util.h  buff_def.h  buff_model.h  buff_primitives.h  building_data_model.h  containers.h  exception_util.h  flag_util.h  func_piecewise.h  game_data_model.h  json_util.h  locale_util.h  log_util.h  mem_util.h  operator_model.h  player_building_model.h  player_data_model.h  primitive_types.h  simulator.h  time_util.h  util.h  worker.h  worker_params.h  xml_util.h
include/json/: json.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cli/src/ProgramOptions/: ProgramOptions.hxx
src/core/: CMakeLists.txt
src/core/include/albc/: albc.h  albc_api_common.h  albc_common.h  albc_internal.h  calbc.h  calbc_internal.h  capi.h
src/core/src/: albc.cpp  albc_config.h  albc_types.h  algorithm.cpp  algorithm.h  algorithm_consts.h  algorithm_iface.cpp  algorithm_iface.h  algorithm_iface_custom.h  algorithm_iface_params.cpp  algorithm_iface_params.h  algorithm_iface_runner.cpp  algorithm_iface_runner.h  algorithm_params.h  algorithm_primitives.h  api_albc.cpp  api_calbc.cpp  api_di.cpp  api_di.h  api_impl.cpp  api_impl.h  api_json_io.cpp  api_json_io.h  api_json_params.cpp  api_json_params.h  api_resource.h  api_storage.h  api_util.cpp  api_util.h  api_utils.h  attributes_util.h  bit_ops.h  buff_consts.h  buff_def.h  buff_map.h  buff_model.h  buff_primitives.h  building_data_model.cpp  building_data_model.h  calbc.cpp  (+78 more)
src/examples/: CMakeLists.txt
src/examples/src/: albcexample.cpp  albcexample.h  c_albcexample.c  c_albcexample.h  json_input.cpp  json_input.h  main.cpp  util.h
test/: building_data.json  building_test.go  player_data.json  test_data.jsonc
